# Hyperstatic

./: .gitignore  .travis.yml  Assemble.py  Beam.py  Changelog.md  CoordinateSystem.py  Element.py  LICENSE  Material.py  Model.py  Node.py  README.md  Section.py  Solver.py  Test.sqlite  __init__.py  beam_test.py  csys.py  main.py  mydev.db  real_project.py  requirements  setup.py  test.dxf  test.py  tri_membrane_test.py  未命名.ipynb
GUI/: Elements.py  (+1 more)
structengpy/: LICENSE  Logger.py  __init__.py  csys.py  main.py  pyproject.toml
structengpy/app/design/GB/: quick_material.py
structengpy/app/general/: __init__.py  db.py  frame.py  loadcase.py  model.py  orm.py  quick_material.py  result.py
structengpy/app/io/: dxf.py  s2k.py
structengpy/app/viz/: __init__.py
structengpy/common/: csys.py  curve.py
structengpy/core/: __init__.py
structengpy/core/fe_model/: assembly.py  model.py  node.py
structengpy/core/fe_post/: __init__.py  beam.py  element.py  node.py  structure.py
structengpy/core/fe_solver/: __init__.py  dynamic.py  static.py
structengpy/fe_model/: __init__.py  common.py  element.py  model.py  node.py
structengpy/fe_model/element/: __init__.py
structengpy/fe_model/line/: __init__.py  beam.py  line.py  link.py
structengpy/fe_model/load/: loadcase.py  pattern.py
structengpy/fe_model/quad/: __init__.py  membrane.py  membrane4.py  plate4.py  quad.py
structengpy/fe_model/tri/: __init__.py  membrane.py  tri.py
structengpy/fe_solver/: __init__.py  dynamic.py
structengpy/model_io/: __init__.py
structengpy/object_model/: __init__.py  area.py
(+326 files in other folders)
